feat(runtime): introduce `MessageHistoryService` for message storage and querying
- Added `MessageHistoryService` to provide thread-safe storage and querying of recent messages using a ring buffer.
- Implemented extensive filtering capabilities (e.g., by topic, sender, timestamp).
- Included integration with `MessageService` for automatic message capturing.
- Comprehensive testing suite to ensure coverage and reliability.
- Deprecated old `MessageHistoryService` class, redirecting to the runtime implementation.